Added colored tooltips and buffed jungle

--- a/jungle.html
+++ b/jungle.html
@@ -18,7 +18,7 @@
 		<div><a class="bucky"></a></div>
 	</div>
 	<div class="main-content">
-		<h1> Camp </h1>
+		<h1> Welcome to the jungle </h1>
 		<p>
 			After farming, come back to this page later.
 		</p>
