--- a/shop.html
+++ b/shop.html
@@ -24,14 +24,14 @@
 		<h1> Item Shop </h>
 		<h2> Weapon </h2>
 		<div class="shopbox">
-			<div class="item">
+			<div class="weapon-item">
 				<img class="Item: Autoslots" onclick="buyItem('Autoslots')" src="Items/Autoslots.png" style="width:15vh;height:15vh;">
 				<span class="tooltiptext">
 					<h1> ($25) Autoslots </h1>
 					<p> Make Button Corp Slots keep playing automatically for 10 minutes. </p>
 				</span>
 			</div>
-			<div class="item">
+			<div class="weapon-item">
 				<img class="Item: Peepo" onclick="buyItem('Peepo')" src="Items/Peepo2X.png" style="width:15vh;height:15vh;">
 				<span class="tooltiptext">
 					<h1> ($125) Peepo2X </h1>
@@ -41,7 +41,7 @@
 		</div>
 		<h2> Spirit </h2>
 		<div class="shopbox">
-			<div class="item">
+			<div class="spirit-item">
 				<img class="Item: Soul" onclick="buyItem('Soul')" src="Items/Soul.png" style="width:15vh;height:15vh;">
 				<span class="tooltiptext">
 					<h1> ($1) Soul </h1>
@@ -51,14 +51,14 @@
 		</div>
 		<h2> Vitality </h2>
 		<div class="shopbox">
-			<div class="item">
+			<div class="vitality-item">
 				<img class="Item: Jungler" onclick="buyItem('Jungler')" src="Items/Jungler.png" style="width:15vh;height:15vh;">
 				<span class="tooltiptext">
 					<h1> ($20) Jungler </h1>
 					<p> Decreases jungle respawn time from 5 minutes to 3 minutes. Lasts 1 hour. </p>
 				</span>
 			</div>
-			<div class="item">
+			<div class="vitality-item">
 				<img class="Item: Burn" onclick="buyItem('Burn')" src="Items/Burn.png" style="width:15vh;height:15vh;">
 				<span class="tooltiptext">
 					<h1> ($100) Burn </h1>
