--- a/about.html
+++ b/about.html
@@ -20,7 +20,9 @@
 	</div>
 	<div class="about-content">
 		<h1> Button Corp. </h1>
-		<p>Here at Button Corp, our mission statement is to strive to bring innovation to this industry. That way we can all work together on creating a brighter tomorrow. We would like to extend our hand and invite you to experience the difference today as we define the edge and expand our horizons.</p>
+		<p>Here at Button Corp, our mission statement is to strive to bring innovation to an ever-changing industry. At the forefront of this vision is our dedication to our craft and to working together on creating a brighter tomorrow. We would like to extend our hand and invite you to experience the difference today as we define the edge and expand our horizons.</p>
+		<h1> Our employee policies. </h1>
+		<p>At the core of our mission as an organization is our dedication to insulting @awgeez5107 on Discord.</p>
 	</div>
 </body>
 <script src="button.js"></script>
