Balance changes and added patch notes

--- a/news.html
+++ b/news.html
@@ -21,6 +21,15 @@
 	<div class="about-content">
 		<h1> Have you heard about the jungle? </h1>
 		<p class="news-story">Those creeps sure have been creeping over there. I wonder what they're up to. Stay tuned in to Button News for more on this story as it progresses.</p>
+		<h1> Today's Patches </h1>
+		<ul>
+			<li>BUFF: Autoslots cost decreased from $25 to $5.</li>
+			<li>BUFF: Peepo2X price decreased from $125 to $80</li>
+			<li>NERF: Autoslots reroll time increases from 1.9 seconds to 3.3 seconds.</li>
+			<li>NERF: Autoslots duration decreased from 10 minutes to 5 minutes.</li>
+			<li>BUG FIX: Fixed a bug where the news page wasn't appearing.</li>
+			<li>Milk</li>
+		</ul>  
 	</div>
 </body>
 <script src="button.js"></script>
