Added warning against users using auto-clickers

--- a/slots.html
+++ b/slots.html
@@ -32,6 +32,7 @@
 			<p color="white">   Music:</p><input type="range" id="musicSlider" class="volume-slider" min="0" max="1" step="0.01" value="0.5">
 			<p>Sounds:</p><input type="range" id="sfxSlider" class="volume-slider" min="0" max="1" step="0.01" value="0.5">
 		</div>
+		<p>You are free to use auto-clickers, but please note that those are not the intended experience.<br>You're only cheating yourself.</p>
 	</div>
 </body>
 <script>
