--- a/shop.html
+++ b/shop.html
@@ -36,7 +36,7 @@
 				<img class="Item: Peepo" onclick="buyItem('Peepo')" src="Items/Peepo2X.png" style="width:15vh;height:15vh;">
 				<span class="tooltiptext">
 					<h1> ($80) Peepo2X </h1>
-					<p> Double the number of Peepos on the slot . </p>
+					<p> Double the number of Peepos on the slot for 10 minutes. </p>
 				</span>
 			</div>
 		</div>
