--- a/shop.html
+++ b/shop.html
@@ -33,6 +33,13 @@
 				</span>
 			</div>
 			<div class="weapon-item">
+				<img class="Item: AutoslotsEX" onclick="buyItem('AutoslotsEX')" src="Items/AutoslotsEX.png" style="width:15vh;height:15vh;">
+				<span class="tooltiptext">
+					<h1> ($35) AutoslotsEX </h1>
+					<p> Make Button Corp Slots keep playing automatically for half an hour. </p>
+				</span>
+			</div>
+			<div class="weapon-item">
 				<img class="Item: Peepo" onclick="buyItem('Peepo')" src="Items/Peepo2X.png" style="width:15vh;height:15vh;">
 				<span class="tooltiptext">
 					<h1> ($80) Peepo2X </h1>
