--- a/news.html
+++ b/news.html
@@ -19,16 +19,12 @@
 		<div><a class="bucky"></a></div>
 	</div>
 	<div class="about-content">
-		<h1> Have you heard about the jungle? </h1>
-		<p class="news-story">Those creeps sure have been creeping over there. I wonder what they're up to. Stay tuned in to Button News for more on this story as it progresses.</p>
+		<h1> They've been saying the housing market is heating up. </h1>
+		<p class="news-story">Analysts say a crash is possible, though unlikely. Just keep buying!</p>
 		<h1> Today's Patches </h1>
 		<ul>
-			<li>BUFF: Autoslots cost decreased from $25 to $5.</li>
-			<li>BUFF: Peepo2X price decreased from $125 to $80</li>
-			<li>NERF: Autoslots reroll time increases from 1.9 seconds to 3.3 seconds.</li>
-			<li>NERF: Autoslots duration decreased from 10 minutes to 5 minutes.</li>
-			<li>BUG FIX: Fixed a bug where the news page wasn't appearing.</li>
-			<li>Milk</li>
+			<li>NERF: Jungler cost increased to $40.</li>		
+			<li>BUFF: Have you been working out?</li>
 		</ul>  
 	</div>
 </body>
