--- a/news.html
+++ b/news.html
@@ -25,6 +25,7 @@
 		<ul>
 			<li>NERF: Jungler cost increased to $40.</li>		
 			<li>BUFF: Have you been working out?</li>
+			<li>BUFF: Purchasing the Soul item now causes you to feel actual guilt.</li>
 		</ul>  
 	</div>
 </body>
