catted the button

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<div class="main-content">
 		<h1> Button of the Day </h1>
 		<p>
-			You get a million US dollars but...<br>All of your friends die
+			You get a pet talking cat but...<br>If it gets more than 1,000 feet away from you, both of you will die.
 		</p>
 		<button class="button" onclick="buttonClick()">Button</button>
 	</div>
