Show error messages in shop

--- a/shop.html
+++ b/shop.html
@@ -22,7 +22,8 @@
 		<button class="slotbutton" onclick="openShop()">Enter Shop</button>
 	</div>
 	<div class="shop-content" hidden=true>
-		<h1> Item Shop </h>
+		<h1> Item Shop </h1>
+		<div id="error-message"></div>
 		<h2> Weapon </h2>
 		<div class="shopbox">
 			<div class="weapon-item">
