--- a/shop.html
+++ b/shop.html
@@ -41,10 +41,17 @@
 				</span>
 			</div>
 			<div class="weapon-item">
+				<img class="Item: Heartbreak" onclick="buyItem('Heartbreak')" src="Items/Heartbreak.png" style="width:15vh;height:15vh;">
+				<span class="tooltiptext">
+					<h1> ($50) Heartbreak </h1>
+					<p> Removes all hearts from the slot machine for 10 minutes. </p>
+				</span>
+			</div>
+			<div class="weapon-item">
 				<img class="Item: Peepo" onclick="buyItem('Peepo')" src="Items/Peepo2X.png" style="width:15vh;height:15vh;">
 				<span class="tooltiptext">
 					<h1> ($80) Peepo2X </h1>
-					<p> Double the number of Peepos on the slot for 10 minutes. </p>
+					<p> (Replaces Heartbreak) Double the number of Peepos on the slot for 10 minutes. </p>
 				</span>
 			</div>
 		</div>
