create directory structure

--- a/shop.html
+++ b/shop.html
@@ -27,28 +27,28 @@
 		<h2> Weapon </h2>
 		<div class="shopbox">
 			<div class="weapon-item">
-				<img class="Item: Autoslots" onclick="buyItem('Autoslots')" src="Items/Autoslots.png" style="width:15vh;height:15vh;">
+				<img class="Item: Autoslots" onclick="buyItem('Autoslots')" src="assets/img/Items/Autoslots.png" style="width:15vh;height:15vh;">
 				<span class="tooltiptext">
 					<h1> ($5) Autoslots </h1>
 					<p> Make Button Corp Slots keep playing automatically for 5 minutes. </p>
 				</span>
 			</div>
 			<div class="weapon-item">
-				<img class="Item: AutoslotsEX" onclick="buyItem('AutoslotsEX')" src="Items/AutoslotsEX.png" style="width:15vh;height:15vh;">
+				<img class="Item: AutoslotsEX" onclick="buyItem('AutoslotsEX')" src="assets/img/Items/AutoslotsEX.png" style="width:15vh;height:15vh;">
 				<span class="tooltiptext">
 					<h1> ($35) AutoslotsEX </h1>
 					<p> Make Button Corp Slots keep playing automatically for half an hour. </p>
 				</span>
 			</div>
 			<div class="weapon-item">
-				<img class="Item: Heartbreak" onclick="buyItem('Heartbreak')" src="Items/Heartbreak.png" style="width:15vh;height:15vh;">
+				<img class="Item: Heartbreak" onclick="buyItem('Heartbreak')" src="assets/img/Items/Heartbreak.png" style="width:15vh;height:15vh;">
 				<span class="tooltiptext">
 					<h1> ($50) Heartbreak </h1>
 					<p> Removes all hearts from the slot machine for 10 minutes. </p>
 				</span>
 			</div>
 			<div class="weapon-item">
-				<img class="Item: Peepo" onclick="buyItem('Peepo')" src="Items/Peepo2X.png" style="width:15vh;height:15vh;">
+				<img class="Item: Peepo" onclick="buyItem('Peepo')" src="assets/img/Items/Peepo2X.png" style="width:15vh;height:15vh;">
 				<span class="tooltiptext">
 					<h1> ($80) Peepo2X </h1>
 					<p> (Replaces Heartbreak) Double the number of Peepos on the slot for 10 minutes. </p>
@@ -58,7 +58,7 @@
 		<h2> Spirit </h2>
 		<div class="shopbox">
 			<div class="spirit-item">
-				<img class="Item: Soul" onclick="buyItem('Soul')" src="Items/Soul.png" style="width:15vh;height:15vh;">
+				<img class="Item: Soul" onclick="buyItem('Soul')" src="assets/img/Items/Soul.png" style="width:15vh;height:15vh;">
 				<span class="tooltiptext">
 					<h1> ($1) Soul </h1>
 					<p> A fragment of a soul nearly lost. Who knows where it's going? </p>
@@ -68,14 +68,14 @@
 		<h2> Vitality </h2>
 		<div class="shopbox">
 			<div class="vitality-item">
-				<img class="Item: Jungler" onclick="buyItem('Jungler')" src="Items/Jungler.png" style="width:15vh;height:15vh;">
+				<img class="Item: Jungler" onclick="buyItem('Jungler')" src="assets/img/Items/Jungler.png" style="width:15vh;height:15vh;">
 				<span class="tooltiptext">
 					<h1> ($40) Jungler </h1>
 					<p> Decreases jungle respawn time from 5 minutes to 3 minutes. Lasts 1 hour. </p>
 				</span>
 			</div>
 			<div class="vitality-item">
-				<img class="Item: Burn" onclick="buyItem('Burn')" src="Items/Burn.png" style="width:15vh;height:15vh;">
+				<img class="Item: Burn" onclick="buyItem('Burn')" src="assets/img/Items/Burn.png" style="width:15vh;height:15vh;">
 				<span class="tooltiptext">
 					<h1> ($100) Burn </h1>
 					<p> Burns your money. This item does nothing useful. </p>
@@ -90,7 +90,7 @@
 	</div>
 </body>
 <script>
-var Music = new Audio("Welcome to the Shop.mp3");
+var Music = new Audio("assets/audio/Welcome to the Shop.mp3");
 window.addEventListener('load', function () {
 	// Does the music and sound sliders
 	// - Owen
