--- a/slots.html
+++ b/slots.html
@@ -19,11 +19,11 @@
 		<div><a class="bucky"></a></div>
 	</div>
 	<div class="slots-content">
-		<img src="Slots Logo.png">
+		<img src="assets/img/Slots%20Logo.png">
 		<div class="slots">
-			<td><img id="SlotImage1" src="1.png" alt="Slot Image #1" style="Width:200px; Height:200px;"></td>
-			<td><img id="SlotImage2" src="2.png" alt="Slot Image #2" style="Width:200px; Height:200px;"></td>
-			<td><img id="SlotImage3" src="3.png" alt="Slot Image #3" style="Width:200px; Height:200px;"></td>
+			<td><img id="SlotImage1" src="assets/img/slots/1.png" alt="Slot Image #1" style="Width:200px; Height:200px;"></td>
+			<td><img id="SlotImage2" src="assets/img/slots/2.png" alt="Slot Image #2" style="Width:200px; Height:200px;"></td>
+			<td><img id="SlotImage3" src="assets/img/slots/3.png" alt="Slot Image #3" style="Width:200px; Height:200px;"></td>
 		</div>
 		<h1 class="wintext">Session Wins: 0</h1>
 		<button class="slotbutton" onclick="DoSpin()">Button</button>
@@ -36,7 +36,7 @@
 	</div>
 </body>
 <script>
-var Music = new Audio("Slots.mp3");
+var Music = new Audio("assets/audio/Slots.mp3");
 window.addEventListener('load', function () {
 	// Does the music and sound sliders
 	// - Owen
