--- a/about.html
+++ b/about.html
@@ -1,23 +1,9 @@
+---
+---
 <!DOCTYPE html>
-<head>
-	<title>Button Corp</title>
-	<link rel="stylesheet" href="./styles.css"/>
-	<link rel="icon" href="Icon.ico">
-</head>
+{% include head.html %}
 <body>
-	<div class="topnav">
-		<div class="topimagediv"><img style="width:45px;height:45px;" src="DarkLogo.png"></div>
-		<ul>
-			<a href="/">Daily Button</a>
-			<a class="active" href="about">About Us</a>
-			<a href="slots">Slots</a>
-			<a href="shop">Shop</a>
-			<a href="jungle">Jungle</a>
-			<a href="news">News</a>
-			<a href="mailto:contact@buttoncorp.org">Contact</a>
-		</ul>
-		<div><a class="bucky"></a></div>
-	</div>
+	{% include navbar.html active="about" %}
 	<div class="about-content">
 		<h1> Button Corp. </h1>
 		<p>Here at Button Corp, our mission statement is to strive to bring innovation to an ever-changing industry. At the forefront of this vision is our dedication to our craft and to working together on creating a brighter tomorrow. We would like to extend our hand and invite you to experience the difference today as we define the edge and expand our horizons.</p>
