--- a/index.html
+++ b/index.html
@@ -1,24 +1,10 @@
+---
+---
 <!DOCTYPE html>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
-<head>
-	<title>Button Corp</title>
-	<link rel="stylesheet" href="./styles.css"/>
-	<link rel="icon" href="Icon.ico">
-</head>
+{% include head.html %}
 <body onload="evalCookie();">
-	<div class="topnav">
-		<div class="topimagediv"><img style="width:45px;height:45px;" src="DarkLogo.png"></div>
-		<ul>
-			<a class="active" href="/">Daily Button</a>
-			<a href="about">About Us</a>
-			<a href="slots">Slots</a>
-			<a href="shop">Shop</a>
-			<a href="jungle">Jungle</a>
-			<a href="news">News</a>
-			<a href="mailto:contact@buttoncorp.org">Contact</a>
-		</ul>
-		<div><a class="bucky"></a></div>
-	</div>
+	{% include navbar.html active="index" %}
 	<div class="main-content">
 		<h1> Button of the Day </h1>
 		<p>
