--- a/news.html
+++ b/news.html
@@ -5,13 +5,13 @@
 <body>
 	{% include navbar.html active="news" %}
 	<div class="about-content">
-		<h1> AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA </h1>
-		<p class="news-story">AAAAAAAAAAAAAAAAAAAAAAAAAAAA</p>
+		<h1> They've been saying the housing market is heating up. </h1>
+		<p class="news-story">Analysts say a crash is possible, though unlikely. Just keep buying!</p>
 		<h1> Today's Patches </h1>
 		<ul>
-			<li>AAAAAAAAAAAAAAAAAA</li>		
-			<li>AAAAAAAAAAAAAAAA?</li>
-			<li>BUFF: AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</li>
+			<li>NERF: Jungler cost increased to $40.</li>		
+			<li>BUFF: Have you been working out?</li>
+			<li>BUFF: Purchasing the Soul item now causes you to feel actual guilt.</li>
 			<li>Milk</li>
 		</ul>  
 	</div>
