--- a/shop.html
+++ b/shop.html
@@ -50,6 +50,13 @@
 					<p> A fragment of a soul nearly lost. Who knows where it's going? </p>
 				</span>
 			</div>
+			<div class="spirit-item">
+				<img class="Item: Eye of the Prophet" onclick="buyItem('Eye of the Prophet')" src="assets/img/Items/Eye of the Prophet.png" style="width:15vh;height:15vh;">
+				<span class="tooltiptext">
+					<h1> ($50) Eye of the Prophet </h1>
+					<p> See the future for a moment. </p>
+				</span>
+			</div>
 		</div>
 		<h2> Vitality </h2>
 		<div class="shopbox">
