--- a/news.html
+++ b/news.html
@@ -9,9 +9,7 @@
 		<p class="news-story">Analysts say a crash is possible, though unlikely. Just keep buying!</p>
 		<h1> Today's Patches </h1>
 		<ul>
-			<li>NERF: Jungler cost increased to $40.</li>		
-			<li>BUFF: Have you been working out?</li>
-			<li>BUFF: Purchasing the Soul item now causes you to feel actual guilt.</li>
+			<li>CHANGE: Unmuted the jungle.</li>
 			<li>Milk</li>
 		</ul>  
 	</div>
