Button press animation
- Added button press animation
- Added server.cmd file that I can run because I'm too lazy to type in the console command manually

--- a/news.html
+++ b/news.html
@@ -10,6 +10,7 @@
 		<h1> Today's Patches </h1>
 		<ul>
 			<li>CHANGE: Unmuted the jungle.</li>
+			<li>CHANGE: Fixed bug that caused button pressing animation to not work properly.</li>
 			<li>Milk</li>
 		</ul>  
 	</div>
