Peepo2X and Heartbreak now have a special interaction

--- a/news.html
+++ b/news.html
@@ -9,6 +9,7 @@
 		<p class="news-story">Analysts say a crash is possible, though unlikely. Just keep buying!</p>
 		<h1> Today's Patches </h1>
 		<ul>
+			<li>BUFF: Peepo2X and Heartbreak now work together.</li>
 			<li>CHANGE: Unmuted the jungle.</li>
 			<li>CHANGE: Fixed bug that caused button pressing animation to not work properly.</li>
 			<li>Milk</li>
