Added shop opening sound

--- a/shop.html
+++ b/shop.html
@@ -100,6 +100,7 @@ window.addEventListener('load', function () {
 		Win.volume = this.value;
 		CashSound.volume = sfxSlider.value;
 		Error.volume = sfxSlider.value;
+		OpenShopSound.volume = sfxSlider.value
 	});
 	Music.volume = musicSlider.value;
 	Spin.volume = sfxSlider.value;
@@ -108,6 +109,7 @@ window.addEventListener('load', function () {
 	Win.volume = sfxSlider.value;
 	CashSound.volume = sfxSlider.value;
 	Error.volume = sfxSlider.value;
+	OpenShopSound.volume = sfxSlider.value
 
 	document.body.onkeyup = function (e) {
 		// Makes the space button also roll the slots
