show user when their button buck balance changes

--- a/jungle.html
+++ b/jungle.html
@@ -9,7 +9,7 @@
 		<p>
 			After farming, come back to this page later.
 		</p>
-		<button class="button" onclick="farmCamp()">Farm</button>
+		<button class="button" onclick="farmCamp()">Farm (+10)</button>
 	</div>
 </body>
 <script src="button.js"></script>
