--- a/shop.html
+++ b/shop.html
@@ -13,28 +13,28 @@
 		<h2> Weapon </h2>
 		<div class="shopbox">
 			<div class="weapon-item">
-				<img class="Item: Autoslots" onclick="buyItem('Autoslots')" src="assets/img/Items/Autoslots.png" style="width:15vh;height:15vh;">
+				<img draggable=false class="Item: Autoslots" onclick="buyItem('Autoslots')" src="assets/img/Items/Autoslots.png" style="width:15vh;height:15vh;">
 				<span class="tooltiptext">
 					<h1> ($5) Autoslots </h1>
 					<p> Make Button Corp Slots keep playing automatically for 5 minutes. </p>
 				</span>
 			</div>
 			<div class="weapon-item">
-				<img class="Item: AutoslotsEX" onclick="buyItem('AutoslotsEX')" src="assets/img/Items/AutoslotsEX.png" style="width:15vh;height:15vh;">
+				<img draggable=false class="Item: AutoslotsEX" onclick="buyItem('AutoslotsEX')" src="assets/img/Items/AutoslotsEX.png" style="width:15vh;height:15vh;">
 				<span class="tooltiptext">
 					<h1> ($35) AutoslotsEX </h1>
 					<p> Make Button Corp Slots keep playing automatically for half an hour. </p>
 				</span>
 			</div>
 			<div class="weapon-item">
-				<img class="Item: Heartbreak" onclick="buyItem('Heartbreak')" src="assets/img/Items/Heartbreak.png" style="width:15vh;height:15vh;">
+				<img draggable=false class="Item: Heartbreak" onclick="buyItem('Heartbreak')" src="assets/img/Items/Heartbreak.png" style="width:15vh;height:15vh;">
 				<span class="tooltiptext">
 					<h1> ($50) Heartbreak </h1>
 					<p> Removes all hearts from the slot machine for 10 minutes. </p>
 				</span>
 			</div>
 			<div class="weapon-item">
-				<img class="Item: Peepo" onclick="buyItem('Peepo')" src="assets/img/Items/Peepo2X.png" style="width:15vh;height:15vh;">
+				<img draggable=false class="Item: Peepo" onclick="buyItem('Peepo')" src="assets/img/Items/Peepo2X.png" style="width:15vh;height:15vh;">
 				<span class="tooltiptext">
 					<h1> ($80) Peepo2X </h1>
 					<p> Double the number of Peepos on the slot for 10 minutes. </p>
@@ -44,14 +44,14 @@
 		<h2> Spirit </h2>
 		<div class="shopbox">
 			<div class="spirit-item">
-				<img class="Item: Soul" onclick="buyItem('Soul')" src="assets/img/Items/Soul.png" style="width:15vh;height:15vh;">
+				<img draggable=false class="Item: Soul" onclick="buyItem('Soul')" src="assets/img/Items/Soul.png" style="width:15vh;height:15vh;">
 				<span class="tooltiptext">
 					<h1> ($1) Soul </h1>
 					<p> A fragment of a soul nearly lost. Who knows where it's going? </p>
 				</span>
 			</div>
 			<div class="spirit-item">
-				<img class="Item: Eye of the Prophet" onclick="buyItem('Eye of the Prophet')" src="assets/img/Items/Eye of the Prophet.png" style="width:15vh;height:15vh;">
+				<img draggable=false class="Item: Eye of the Prophet" onclick="buyItem('Eye of the Prophet')" src="assets/img/Items/Eye of the Prophet.png" style="width:15vh;height:15vh;">
 				<span class="tooltiptext">
 					<h1> ($50) Eye of the Prophet </h1>
 					<p> See the future for a moment. </p>
@@ -61,14 +61,14 @@
 		<h2> Vitality </h2>
 		<div class="shopbox">
 			<div class="vitality-item">
-				<img class="Item: Jungler" onclick="buyItem('Jungler')" src="assets/img/Items/Jungler.png" style="width:15vh;height:15vh;">
+				<img draggable=false class="Item: Jungler" onclick="buyItem('Jungler')" src="assets/img/Items/Jungler.png" style="width:15vh;height:15vh;">
 				<span class="tooltiptext">
 					<h1> ($40) Jungler </h1>
 					<p> Decreases jungle respawn time from 5 minutes to 3 minutes. Lasts 1 hour. </p>
 				</span>
 			</div>
 			<div class="vitality-item">
-				<img class="Item: Burn" onclick="buyItem('Burn')" src="assets/img/Items/Burn.png" style="width:15vh;height:15vh;">
+				<img draggable=false class="Item: Burn" onclick="buyItem('Burn')" src="assets/img/Items/Burn.png" style="width:15vh;height:15vh;">
 				<span class="tooltiptext">
 					<h1> ($100) Burn </h1>
 					<p> Burns your money. This item does nothing useful. </p>
