--- a/news.html
+++ b/news.html
@@ -12,6 +12,7 @@
 			<li>BUFF: Peepo2X and Heartbreak now work together.</li>
 			<li>CHANGE: Unmuted the jungle.</li>
 			<li>CHANGE: Fixed bug that caused button pressing animation to not work properly.</li>
+			<li>CHANGE: Fixed bug causing shop voicelines to not play.</li>
 			<li>Milk</li>
 		</ul>  
 	</div>
