--- a/settings.html
+++ b/settings.html
@@ -29,3 +29,7 @@ window.addEventListener('load', function () {
 })
 </script>
 <script src="button.js"></script>
+<script>
+	musicSlider.value=getCookie("musicSlider")
+	sfxSlider.value=getCookie("sfxSlider")
+</script>
