Updated news, updated purchase sounds, updated icons

--- a/news.html
+++ b/news.html
@@ -5,8 +5,8 @@
 <body>
 	{% include navbar.html active="news" %}
 	<div class="about-content">
-		<h1> They've been saying the housing market is heating up. </h1>
-		<p class="news-story">Analysts say a crash is possible, though unlikely. Just keep buying!</p>
+		<h1> Did you hear the shop keeper? </h1>
+		<p class="news-story">I've heard he's new in town.</p>
 		<h1> Today's Patches </h1>
 		<ul>
 			<li>BUFF: Peepo2X and Heartbreak now work together.</li>
@@ -20,6 +20,6 @@
 <script src="button.js"></script>
 <script>
 	if (hasItem("Soul")) {
-		document.getElementsByClassName("news-story")[0].textContent="You've got blood on your hands, as do I. Did you press the button too?"
+		document.getElementsByClassName("news-story")[0].textContent="He's kinda cute."
 	}
 </script>
