Jungler is now called "Speed Jungler", and Button Wiki has been made private

--- a/shop.html
+++ b/shop.html
@@ -61,9 +61,9 @@
 		<h2> Vitality </h2>
 		<div class="shopbox">
 			<div class="vitality-item">
-				<img draggable=false class="Item: Jungler" onclick="buyItem('Jungler')" src="assets/img/Items/Jungler.png" style="width:15vh;height:15vh;">
+				<img draggable=false class="Item: Speed Jungler" onclick="buyItem('Speed Jungler')" src="assets/img/Items/Speed Jungler.png" style="width:15vh;height:15vh;">
 				<span class="tooltiptext">
-					<h1> ($40) Jungler </h1>
+					<h1> ($40) Speed Jungler </h1>
 					<p> Decreases jungle respawn time from 5 minutes to 3 minutes. Lasts 1 hour. </p>
 				</span>
 			</div>
