Added "Bad Time" and fixed music volume

--- a/shop.html
+++ b/shop.html
@@ -57,6 +57,13 @@
 					<p> See the future for a moment. </p>
 				</span>
 			</div>
+			<div class="spirit-item">
+				<img draggable=false class="Item: Bad Time" onclick="buyItem('Bad Time')" src="assets/img/Items/Bad Time.png" style="width:15vh;height:15vh;">
+				<span class="tooltiptext">
+					<h1> ($20) Bad Time </h1>
+					<p> Changes the slot machine music for 10 minutes. </p>
+				</span>
+			</div>
 		</div>
 		<h2> Vitality </h2>
 		<div class="shopbox">
@@ -81,5 +88,5 @@
 <script src="button.js"></script>
 <script>
 updateShop()
-Music.loop = true
 </script>
+<script src="music.js"></script>
