Music and sound sliders no longer reset to their default values

--- a/news.html
+++ b/news.html
@@ -9,6 +9,7 @@
 		<p class="news-story">People are saying he's a fraud and his prophecy was false.</p>
 		<h1> Today's Patches </h1>
 		<ul>
+			<li>FIX: Music and sound volume sliders no longer reset when entering settings menu.</li>
 			<li>Milk</li>
 		</ul>  
 		<h1> NOTICE </h1>
